--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -582,10 +582,10 @@ waits for you to be idle for 2 seconds, and then automatically triggers
 updating the cache. After the cache has been updated, running @code{M-x
 org-roam-find-file} again should show the note you have created, and selecting
 that entry will bring you to that note @footnote{Depending on your completion framework, you may need to press TAB to
-see the list.}. One can customize the waiting time by
-setting @code{org-roam-db-update-idle-seconds}; or change the cache update to be
-triggered immediately after buffer save by setting @code{org-roam-db-update-method}
-to @code{'immediate}.
+see the list.}. One can customize the waiting
+time by setting @code{org-roam-db-update-idle-seconds}; or change the cache update
+to be triggered immediately after buffer save by setting
+@code{org-roam-db-update-method} to @code{'immediate}.
 
 Org-roam makes it easy to create notes, and link them together. To link notes
 together, we call @code{M-x org-roam-insert}. This brings up a prompt with a list of
